fix grid-gap property error

--- a/assets/sass/_testimonials.scss
+++ b/assets/sass/_testimonials.scss
@@ -275,7 +275,7 @@ $spancolor: #929294;
                     }
                 }
                 .testimonials-container{
-                    grid-grap: 0;
+                    grid-gap: 0;
                     .test-sides {
                         
                         .person-img{
